applications/nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api
  namespace: default
  labels:
    app.kubernetes.io/name: nodejs-api
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nodejs-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
